force-app/main/default/objects/Connection_Type__c/Connection_Type__c.object-meta.xml
<CustomObject>
    <label>Connection Type</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Connection Type ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connection Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>