force-app/main/default/objects/Connection_Type__c/fields/Broadcast__c.field-meta.xml
<CustomField>
    <fullName>Broadcast__c</fullName>
    <label>Broadcast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>