force-app/main/default/objects/Connection_Type__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sprint</fullName>
            </value>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>