force-app/main/default/objects/Connection_Type__c/fields/Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Change_Reason__c</fullName>
    <description>Change reason for publishing outbound message to TIBCO for Connection Types</description>
    <label>Change Reason</label>
    <length>30</length>
    <type>Text</type>
</CustomField>