force-app/main/default/objects/Connection_Type__c/fields/CI_1__c.field-meta.xml
<CustomField>
    <fullName>CI_1__c</fullName>
    <label>CI 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>