force-app/main/default/objects/Connection_Type__c/fields/CI_2__c.field-meta.xml
<CustomField>
    <fullName>CI_2__c</fullName>
    <label>CI 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>