force-app/main/default/objects/Connection_Type__c/fields/CI_3__c.field-meta.xml
<CustomField>
    <fullName>CI_3__c</fullName>
    <label>CI 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>