force-app/main/default/objects/Connection_Type__c/fields/CI_Type__c.field-meta.xml
<CustomField>
    <fullName>CI_Type__c</fullName>
    <label>CI Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Disconnected/Removed</fullName>
            </value>
            <value>
                <fullName>Intermittent</fullName>
            </value>
            <value>
                <fullName>Persistent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>