force-app/main/default/objects/Connection_Type__c/fields/Circuit_Physical_Zip__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Physical_Zip__c</fullName>
    <label>Circuit Physical Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>