force-app/main/default/objects/Connection_Type__c/fields/Comm_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Comm_Protocol__c</fullName>
    <label>Comm Protocol</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Async</fullName>
            </value>
            <value>
                <fullName>Async/Telnet</fullName>
            </value>
            <value>
                <fullName>Sync</fullName>
            </value>
            <value>
                <fullName>TCP/IP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>