force-app/main/default/objects/Connection_Type__c/fields/Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_ID__c</fullName>
    <label>Company ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>