force-app/main/default/objects/Connection_Type__c/fields/Connection_Status__c.field-meta.xml
<CustomField>
    <fullName>Connection_Status__c</fullName>
    <label>Connection Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Active - Primary</fullName>
            </value>
            <value>
                <fullName>Active - Secondary</fullName>
            </value>
            <value>
                <fullName>Active - Tertiary</fullName>
            </value>
            <value>
                <fullName>Additional - Set Ups</fullName>
            </value>
            <value>
                <fullName>Disaster Recover</fullName>
            </value>
            <value>
                <fullName>Disconnected</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pending - Disconnect</fullName>
            </value>
            <value>
                <fullName>Pending - Set Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>