force-app/main/default/objects/Connection_Type__c/fields/Connection_Type__c.field-meta.xml
<CustomField>
    <fullName>Connection_Type__c</fullName>
    <label>Connection Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ALK</fullName>
            </value>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>Bill Back Dial In</fullName>
            </value>
            <value>
                <fullName>CDS</fullName>
            </value>
            <value>
                <fullName>CER</fullName>
            </value>
            <value>
                <fullName>Dial In 800</fullName>
            </value>
            <value>
                <fullName>Dial In LOCAL</fullName>
            </value>
            <value>
                <fullName>Driver Email</fullName>
            </value>
            <value>
                <fullName>Driver Notification</fullName>
            </value>
            <value>
                <fullName>Driver Workflow</fullName>
            </value>
            <value>
                <fullName>Frame Relay</fullName>
            </value>
            <value>
                <fullName>GTracs/Web</fullName>
            </value>
            <value>
                <fullName>InCab Scanning</fullName>
            </value>
            <value>
                <fullName>MMS</fullName>
            </value>
            <value>
                <fullName>MPLS</fullName>
            </value>
            <value>
                <fullName>Navigation</fullName>
            </value>
            <value>
                <fullName>OMNI1</fullName>
            </value>
            <value>
                <fullName>PPP 800</fullName>
            </value>
            <value>
                <fullName>PPP LOCAL</fullName>
            </value>
            <value>
                <fullName>PPTP</fullName>
            </value>
            <value>
                <fullName>QHOS Sub</fullName>
            </value>
            <value>
                <fullName>QMASS</fullName>
            </value>
            <value>
                <fullName>QTRACS/Services Portal</fullName>
            </value>
            <value>
                <fullName>QTracs/Web</fullName>
            </value>
            <value>
                <fullName>RVG</fullName>
            </value>
            <value>
                <fullName>Shared Frame Relay</fullName>
            </value>
            <value>
                <fullName>STRACS/Services Portal</fullName>
            </value>
            <value>
                <fullName>T2/Services Portal</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>TPMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>