force-app/main/default/objects/Connection_Type__c/fields/Cust_ID__c.field-meta.xml
<CustomField>
    <fullName>Cust_ID__c</fullName>
    <label>Cust ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>