force-app/main/default/objects/Connection_Type__c/fields/Cust_LAN_3__c.field-meta.xml
<CustomField>
    <fullName>Cust_LAN_3__c</fullName>
    <label>Cust LAN 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>