force-app/main/default/objects/Connection_Type__c/fields/Cust_LAN_IP_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Cust_LAN_IP_Prefix__c</fullName>
    <label>Cust LAN IP Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>