force-app/main/default/objects/Connection_Type__c/fields/Cust_Local_Circuit_ID__c.field-meta.xml
<CustomField>
    <fullName>Cust_Local_Circuit_ID__c</fullName>
    <label>Cust Local Circuit ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>