force-app/main/default/objects/Connection_Type__c/fields/Cust_S0_1_S2_0_to_SD_IP__c.field-meta.xml
<CustomField>
    <fullName>Cust_S0_1_S2_0_to_SD_IP__c</fullName>
    <label>Cust S0.1/S2.0 to SD IP</label>
    <length>15</length>
    <type>Text</type>
</CustomField>