force-app/main/default/objects/Connection_Type__c/fields/Cust_to_QC_DBU_LV__c.field-meta.xml
<CustomField>
    <fullName>Cust_to_QC_DBU_LV__c</fullName>
    <label>Cust to QC DBU LV</label>
    <type>Phone</type>
</CustomField>