force-app/main/default/objects/Connection_Type__c/fields/Customer_Allows_ICMP__c.field-meta.xml
<CustomField>
    <fullName>Customer_Allows_ICMP__c</fullName>
    <label>Customer Allows ICMP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>