force-app/main/default/objects/Connection_Type__c/fields/Customer_Crypto_Map_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Crypto_Map_Number__c</fullName>
    <label>Customer Crypto Map Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>