force-app/main/default/objects/Connection_Type__c/fields/Customer_Host_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Host_IP_Address__c</fullName>
    <label>Customer Host IP Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>