force-app/main/default/objects/Connection_Type__c/fields/Date_Activated__c.field-meta.xml
<CustomField>
    <fullName>Date_Activated__c</fullName>
    <label>Date Activated</label>
    <type>Date</type>
</CustomField>