force-app/main/default/objects/Connection_Type__c/fields/DBU__c.field-meta.xml
<CustomField>
    <fullName>DBU__c</fullName>
    <label>DBU</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DBU 800</fullName>
            </value>
            <value>
                <fullName>DBU Local</fullName>
            </value>
            <value>
                <fullName>DBU PPTP</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>