force-app/main/default/objects/Connection_Type__c/fields/Dial_Restorial_IP_LV__c.field-meta.xml
<CustomField>
    <fullName>Dial_Restorial_IP_LV__c</fullName>
    <label>Dial Restorial IP – LV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>