force-app/main/default/objects/Connection_Type__c/fields/Dialed_Number__c.field-meta.xml
<CustomField>
    <fullName>Dialed_Number__c</fullName>
    <label>Dialed Number</label>
    <type>Phone</type>
</CustomField>