force-app/main/default/objects/Connection_Type__c/fields/Dialed_Number_LV__c.field-meta.xml
<CustomField>
    <fullName>Dialed_Number_LV__c</fullName>
    <label>Dialed Number LV</label>
    <type>Phone</type>
</CustomField>