force-app/main/default/objects/Connection_Type__c/fields/Dialed_Number_SD__c.field-meta.xml
<CustomField>
    <fullName>Dialed_Number_SD__c</fullName>
    <label>Dialed Number SD</label>
    <type>Phone</type>
</CustomField>