force-app/main/default/objects/Connection_Type__c/fields/DLCI_Size__c.field-meta.xml
<CustomField>
    <fullName>DLCI_Size__c</fullName>
    <label>DLCI Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>56K</fullName>
            </value>
            <value>
                <fullName>64K</fullName>
            </value>
            <value>
                <fullName>128K</fullName>
            </value>
            <value>
                <fullName>256K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>