force-app/main/default/objects/Connection_Type__c/fields/E0_Fa0_IP__c.field-meta.xml
<CustomField>
    <fullName>E0_Fa0_IP__c</fullName>
    <label>E0/Fa0 IP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>