force-app/main/default/objects/Connection_Type__c/fields/Fleet_ID__c.field-meta.xml
<CustomField>
    <fullName>Fleet_ID__c</fullName>
    <label>Fleet ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>