force-app/main/default/objects/Connection_Type__c/fields/Frame_LV_7507_IP__c.field-meta.xml
<CustomField>
    <fullName>Frame_LV_7507_IP__c</fullName>
    <label>Frame LV 7507 IP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>