force-app/main/default/objects/Connection_Type__c/fields/Frame_LV_Broadcast__c.field-meta.xml
<CustomField>
    <fullName>Frame_LV_Broadcast__c</fullName>
    <label>Frame LV Broadcast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>