force-app/main/default/objects/Connection_Type__c/fields/Frame_LV_IP_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Frame_LV_IP_Prefix__c</fullName>
    <label>Frame LV IP Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>