force-app/main/default/objects/Connection_Type__c/fields/Host_IP__c.field-meta.xml
<CustomField>
    <fullName>Host_IP__c</fullName>
    <label>Host IP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>