force-app/main/default/objects/Connection_Type__c/fields/Host_Type__c.field-meta.xml
<CustomField>
    <fullName>Host_Type__c</fullName>
    <label>Host Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AS400</fullName>
            </value>
            <value>
                <fullName>Homegrown</fullName>
            </value>
            <value>
                <fullName>Mainframe</fullName>
            </value>
            <value>
                <fullName>McLeod</fullName>
            </value>
            <value>
                <fullName>QWIN</fullName>
            </value>
            <value>
                <fullName>SSI</fullName>
            </value>
            <value>
                <fullName>TMW</fullName>
            </value>
            <value>
                <fullName>Unix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>