force-app/main/default/objects/Connection_Type__c/fields/IPSEC_Encryption__c.field-meta.xml
<CustomField>
    <fullName>IPSEC_Encryption__c</fullName>
    <label>IPSEC Encryption</label>
    <length>50</length>
    <type>Text</type>
</CustomField>