force-app/main/default/objects/Connection_Type__c/fields/IPSEC_Hash__c.field-meta.xml
<CustomField>
    <fullName>IPSEC_Hash__c</fullName>
    <label>IPSEC Hash</label>
    <length>50</length>
    <type>Text</type>
</CustomField>