force-app/main/default/objects/Connection_Type__c/fields/IPSEC_PFS__c.field-meta.xml
<CustomField>
    <fullName>IPSEC_PFS__c</fullName>
    <label>IPSEC PFS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>