force-app/main/default/objects/Connection_Type__c/fields/IPSEC_SA_Lifetime__c.field-meta.xml
<CustomField>
    <fullName>IPSEC_SA_Lifetime__c</fullName>
    <label>IPSEC SA Lifetime</label>
    <length>50</length>
    <type>Text</type>
</CustomField>