force-app/main/default/objects/Connection_Type__c/fields/ISAKMP_DH_Group__c.field-meta.xml
<CustomField>
    <fullName>ISAKMP_DH_Group__c</fullName>
    <label>ISAKMP DH Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>