force-app/main/default/objects/Connection_Type__c/fields/ISAKMP_Encryption__c.field-meta.xml
<CustomField>
    <fullName>ISAKMP_Encryption__c</fullName>
    <label>ISAKMP Encryption</label>
    <length>50</length>
    <type>Text</type>
</CustomField>