force-app/main/default/objects/Connection_Type__c/fields/ISAKMP_Hash__c.field-meta.xml
<CustomField>
    <fullName>ISAKMP_Hash__c</fullName>
    <label>ISAKMP Hash</label>
    <length>50</length>
    <type>Text</type>
</CustomField>