force-app/main/default/objects/Connection_Type__c/fields/ISAKMP_SA_Lifetime__c.field-meta.xml
<CustomField>
    <fullName>ISAKMP_SA_Lifetime__c</fullName>
    <label>ISAKMP SA Lifetime</label>
    <length>50</length>
    <type>Text</type>
</CustomField>