force-app/main/default/objects/Connection_Type__c/fields/ISP_1_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>ISP_1_Service_Type__c</fullName>
    <label>ISP 1 Service Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>