force-app/main/default/objects/Connection_Type__c/fields/ISP_1_Vendor__c.field-meta.xml
<CustomField>
    <fullName>ISP_1_Vendor__c</fullName>
    <label>ISP 1 Vendor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>