force-app/main/default/objects/Connection_Type__c/fields/ISP_2_Vendor__c.field-meta.xml
<CustomField>
    <fullName>ISP_2_Vendor__c</fullName>
    <label>ISP 2 Vendor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>