force-app/main/default/objects/Connection_Type__c/fields/Last_Originating_Number_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Originating_Number_Change__c</fullName>
    <description>This field will be updated by Apex Code whenever an Originating Number child record changes.  The intent is to trigger the workflow rule that will send the Outbound Message to TIBCO.</description>
    <label>Last Originating Number Change</label>
    <type>DateTime</type>
</CustomField>