force-app/main/default/objects/Connection_Type__c/fields/LO_IP__c.field-meta.xml
<CustomField>
    <fullName>LO_IP__c</fullName>
    <label>LO IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>