force-app/main/default/objects/Connection_Type__c/fields/LO_Network__c.field-meta.xml
<CustomField>
    <fullName>LO_Network__c</fullName>
    <label>LO Network</label>
    <length>255</length>
    <type>Text</type>
</CustomField>