force-app/main/default/objects/Connection_Type__c/fields/LV_Ethernet__c.field-meta.xml
<CustomField>
    <fullName>LV_Ethernet__c</fullName>
    <label>LV Ethernet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>