force-app/main/default/objects/Connection_Type__c/fields/LV_T1_CKT__c.field-meta.xml
<CustomField>
    <fullName>LV_T1_CKT__c</fullName>
    <label>LV T1 CKT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>