force-app/main/default/objects/Connection_Type__c/fields/Name_of_Customer_Access_List__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Customer_Access_List__c</fullName>
    <label>Name of Customer Access List</label>
    <length>50</length>
    <type>Text</type>
</CustomField>