force-app/main/default/objects/Connection_Type__c/fields/NMC_Account__c.field-meta.xml
<CustomField>
    <fullName>NMC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NMC Account</label>
    <referenceTo>NMC_Account__c</referenceTo>
    <relationshipName>Connection_Types</relationshipName>
    <type>Lookup</type>
</CustomField>