force-app/main/default/objects/Connection_Type__c/fields/NMC_Account_Other__c.field-meta.xml
<CustomField>
    <fullName>NMC_Account_Other__c</fullName>
    <label>NMC Account - Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>