force-app/main/default/objects/Connection_Type__c/fields/NMC_Password__c.field-meta.xml
<CustomField>
    <fullName>NMC_Password__c</fullName>
    <label>NMC Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>