force-app/main/default/objects/Connection_Type__c/fields/NPA_NXX__c.field-meta.xml
<CustomField>
    <fullName>NPA_NXX__c</fullName>
    <label>NPA/NXX</label>
    <length>15</length>
    <type>Text</type>
</CustomField>