force-app/main/default/objects/Connection_Type__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <formula>&quot;Connection_Type__c&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object Name</label>
    <type>Text</type>
</CustomField>