force-app/main/default/objects/Connection_Type__c/fields/Port_DLCI__c.field-meta.xml
<CustomField>
    <fullName>Port_DLCI__c</fullName>
    <label>Port DLCI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>