force-app/main/default/objects/Connection_Type__c/fields/Port_on_SD_Router__c.field-meta.xml
<CustomField>
    <fullName>Port_on_SD_Router__c</fullName>
    <label>Port on SD Router</label>
    <length>255</length>
    <type>Text</type>
</CustomField>