force-app/main/default/objects/Connection_Type__c/fields/Portal_Login__c.field-meta.xml
<CustomField>
    <fullName>Portal_Login__c</fullName>
    <label>Portal Login</label>
    <length>100</length>
    <type>Text</type>
</CustomField>