force-app/main/default/objects/Connection_Type__c/fields/Pre_Shared_Key__c.field-meta.xml
<CustomField>
    <fullName>Pre_Shared_Key__c</fullName>
    <label>Pre-Shared Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>