force-app/main/default/objects/Connection_Type__c/fields/Primary_Customer_Peer_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_Peer_IP_Address__c</fullName>
    <label>Primary Customer Peer IP Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>