force-app/main/default/objects/Connection_Type__c/fields/PVC_3_LOC__c.field-meta.xml
<CustomField>
    <fullName>PVC_3_LOC__c</fullName>
    <label>PVC 3 &amp; LOC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>