force-app/main/default/objects/Connection_Type__c/fields/PVC_3_Size__c.field-meta.xml
<CustomField>
    <fullName>PVC_3_Size__c</fullName>
    <label>PVC 3 Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0K</fullName>
            </value>
            <value>
                <fullName>8K</fullName>
            </value>
            <value>
                <fullName>16K</fullName>
            </value>
            <value>
                <fullName>32K</fullName>
            </value>
            <value>
                <fullName>56K</fullName>
            </value>
            <value>
                <fullName>128K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>