force-app/main/default/objects/Connection_Type__c/fields/PVC_LV__c.field-meta.xml
<CustomField>
    <fullName>PVC_LV__c</fullName>
    <label>PVC LV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>