force-app/main/default/objects/Connection_Type__c/fields/PVC_SD__c.field-meta.xml
<CustomField>
    <fullName>PVC_SD__c</fullName>
    <label>PVC SD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>