force-app/main/default/objects/Connection_Type__c/fields/QTRACS__c.field-meta.xml
<CustomField>
    <fullName>QTRACS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QTRACS</label>
    <type>Checkbox</type>
</CustomField>