force-app/main/default/objects/Connection_Type__c/fields/RMT_Integration__c.field-meta.xml
<CustomField>
    <fullName>RMT_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RMT Integration</label>
    <type>Checkbox</type>
</CustomField>