force-app/main/default/objects/Connection_Type__c/fields/Router_Model__c.field-meta.xml
<CustomField>
    <fullName>Router_Model__c</fullName>
    <label>Router Model #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>